kubernetes/apps/monitoring/victoria-metrics/stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metrics
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - 'metrics.xcd.dev'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/write
      backendRefs:
        - name: vmauth-ingest
          port: 8427
